@@ -1,7 +1,7 @@
 /*
  * ProFTPD: mod_wrap2 -- tcpwrappers-like access control
  *
- * Copyright (c) 2000-2006 TJ Saunders
+ * Copyright (c) 2000-2007 TJ Saunders
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -22,7 +22,7 @@
  * resulting executable, without including the source code for OpenSSL in the
  * source distribution.
  *
- * $Id: mod_wrap2.h.in,v 1.2 2006-10-24 01:34:23 castaglia Exp $
+ * $Id: mod_wrap2.h.in,v 1.3 2007-08-03 14:52:06 castaglia Exp $
  *
  * -- DO NOT MODIFY THE LINE BELOW --
  * $Libraries: @WRAP2_LIBS@$
@@ -34,7 +34,7 @@
 #include "conf.h"
 #include "privs.h"
 
-#define MOD_WRAP2_VERSION 	"mod_wrap2/2.0.5"
+#define MOD_WRAP2_VERSION 	"mod_wrap2/2.0.6"
 
 /* Make sure the version of proftpd is as necessary. */
 #if PROFTPD_VERSION_NUMBER < 0x0001030001
@@ -68,9 +68,9 @@ typedef struct table_obj {
 
   /* Table I/O routines */
   int (*tab_close)(struct table_obj *);
-  char *(*tab_fetch_clients)(struct table_obj *, const char *);
-  char *(*tab_fetch_daemons)(struct table_obj *, const char *);
-  char *(*tab_fetch_options)(struct table_obj *, const char *);
+  array_header *(*tab_fetch_clients)(struct table_obj *, const char *);
+  array_header *(*tab_fetch_daemons)(struct table_obj *, const char *);
+  array_header *(*tab_fetch_options)(struct table_obj *, const char *);
 
 } wrap2_table_t;
 
