@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.833 2007-07-31 15:17:12 castaglia Exp $
+$Id: NEWS,v 1.834 2007-08-03 14:52:06 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -17,6 +17,7 @@ CVS
 - Bug 2950 - Hostname with multiple IP addresses might cause "ai_family not
   supported" error if IPv6 support enabled.
 - Bug 2955 - Undeclared identifier MAP_FAILED for mod_delay on AIX.
+- Bug 2958 - mod_wrap2 does not handle multiple rules in access files.
 
 1.3.1rc3 - Released 04-Jul-2007
 --------------------------------
